# anxuanzi.github.io

./: _config.yml  index.html
_layouts/: default.html
_projects/: 2_Homework_6.md
_site/: index.html  pyproject.toml  sitemap.xml
_site/about/: index.html
_site/blog/: hello-blog-world.html  index.html  tags.html
_site/projects/: 1-vega-lite-project.html  2-homework-6.html  index.html
assets/hw6/: number_of_licenses_by_type_and_status.json  timeline_of_licenses_with_disciplinary_actions.json
python_notebooks/: hw6.ipynb
