[tool.poetry]
name = "anxuanzi-github-io"
version = "0.1.0"
description = ""
authors = ["Tony An <anxuanzi@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
altair = "^5.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

